# genetic-optimization-cuda

./: .gitignore  CMakeLists.txt  DeviceArray.h  LICENCE  Program.cs  a.out  ariaParser.h  catch.h  compile.bat  compileOptimize.bat  fillRandom.cuh  integration.test.cu  main.cu  main.cuu  makefile  package-lock.json  package.json  r.sh  setEnvironment.bat  tests.cpp  uniform_int.h  watch.js
Knn/: Knn.cuh  Knn.h  Knn.test.cu  testData1.csv  testData2.csv  testTest.csv  train.csv
Performance/: Performance.cpp  Performance.cu  Performance.h
crowdingDistance/: crowdingDistance.cuh  crowdingDistance.test.cu
files/: IrisFitness.cuh  dataset.h
fitness/: BasicFitness.cuh  KnnFitness.cuh  KnnFitness.test.cu  Utils.cu  fitnessTransform.cu  fitnessTransform.cuh  populationReduction.cuh  populationReduction.test.cu  test.cu  test.h  testData2.csv
genetics/: CrossOver.cuh  GeneticAlgorithm.cuh  Mutation.cuh  Population.cuh  Randomize.cu  Randomize.cuh  Selection.cuh  Selection.h  genetics.test.cu
lib/: FloatArray.cuh  lib.cuh
nsga/: PopFitness.cuh  crossover.cuh  crossover.test.cu  genetics.cuh  genetics.test.cu  mutation.cuh  selection.cu  selection.cuh  selection.test.cu
processDataset/: .gitignore  ArrayExtensions.cs  DataSetHelper.cs  FlatArray.cs  LabelReader.cs  Program.cs  omnisharp.json
processDataset/data/banana/: banana-meta.csv  banana-test.csv  banana-train.csv
processDataset/data/iris/: iris-meta.csv  iris-test.csv  iris-train.csv  iris-verify.csv
processDataset/data/magic/: magic-meta.csv  magic-test.csv  magic-train.csv
processDataset/data/ring/: ring-meta.csv  ring-test.csv  ring-train.csv
processDataset/data/spambase/: spambase-meta.csv  spambase-test.csv  spambase-train.csv
processDataset/dataSets/: magic.csv  ring.csv  spambase.csv
results/: export.csv
sorting/: sorting.cuh  sorting.test.cu
